tests/expectations/compiler/const_generics/resolved_mismatched_fail.out
Error [ETYC0372117]: Expected type `foo.aleo/Foo::[0u32]` but type `foo.aleo/Foo::[1u32]` was found.
    --> compiler-test:13:12
     |
  13 |     return Foo::[2 * N + 1] { x: 0 };
     |            ^^^
